.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Personal__c.object
<CustomObject>
    <description>Used to record personal and confidential information</description>
    <fields>
        <fullName>Address_1_test__c</fullName>
        <label>Address 1 test</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_data_confirmed_on__c</fullName>
        <description>Using this field for GDPR consents, to know at what date/time did the employee confirmed his personal data retention.</description>
        <label>Personal data confirmed on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Account_name__c</fullName>
        <inlineHelpText>Bank account name</inlineHelpText>
        <label>Account name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Account_number__c</fullName>
        <label>Account number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Address_1__c</fullName>
        <formula>xcdhcm__Personal_address_L__r.xcdhcm__Address_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Address_2__c</fullName>
        <formula>xcdhcm__Personal_address_L__r.xcdhcm__Address_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Address_3__c</fullName>
        <formula>xcdhcm__Personal_address_L__r.xcdhcm__City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Address__c</fullName>
        <formula>xcdhcm__Personal_address_L__r.xcdhcm__Address_1__c  &amp;&quot;, &quot;&amp;
if( xcdhcm__Personal_address_L__r.xcdhcm__Address_2__c  &lt;&gt; null, (xcdhcm__Personal_address_L__r.xcdhcm__Address_2__c &amp;&quot;, &quot;), null) &amp;
 xcdhcm__Personal_address_L__r.xcdhcm__City__c &amp;&quot;, &quot; &amp;
 xcdhcm__Personal_address_L__r.xcdhcm__Postal_zipcode__c</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Age__c</fullName>
        <formula>TEXT(
IF(MONTH(TODAY())= MONTH(xcdhcm__DOB__c),
IF(DAY(TODAY())&lt; DAY(xcdhcm__DOB__c),
YEAR(TODAY())- YEAR(xcdhcm__DOB__c) - 1,
YEAR(TODAY())- YEAR(xcdhcm__DOB__c)),
IF(MONTH(TODAY())&lt; MONTH(xcdhcm__DOB__c),
YEAR(TODAY())- YEAR(xcdhcm__DOB__c) - 1,
YEAR(TODAY())- YEAR(xcdhcm__DOB__c))
) 
) &amp; &quot; year(s) &amp; &quot; &amp;
TEXT(
IF(YEAR(TODAY())= YEAR(xcdhcm__DOB__c),
IF(MONTH(TODAY())= MONTH(xcdhcm__DOB__c),
0, 
IF(DAY(TODAY())&lt; DAY(xcdhcm__DOB__c),
MONTH(TODAY())- MONTH(xcdhcm__DOB__c) - 1,
MONTH(TODAY())- MONTH(xcdhcm__DOB__c))
),
IF(MONTH(TODAY())= MONTH(xcdhcm__DOB__c),
IF(DAY(TODAY())&lt; DAY(xcdhcm__DOB__c),
11,
0),
IF(MONTH(TODAY())&gt; MONTH(xcdhcm__DOB__c),
IF(DAY(TODAY())&lt; DAY(xcdhcm__DOB__c),
MONTH(TODAY())- MONTH(xcdhcm__DOB__c) - 1,
MONTH(TODAY())- MONTH(xcdhcm__DOB__c)),
IF(DAY(TODAY())&lt; DAY(xcdhcm__DOB__c),
11 - (MONTH(xcdhcm__DOB__c) - MONTH(TODAY())),
12 - (MONTH(xcdhcm__DOB__c) - MONTH(TODAY())))
)
)
)
) &amp; &quot; month(s)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Age_in_months__c</fullName>
        <formula>if (isblank( xcdhcm__DOB__c ), 0, 
   (VALUE( LEFT( xcdhcm__Age__c , 2) )*12 + VALUE( TRIM(LEFT(RIGHT( xcdhcm__Age__c , 11) , 2)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age in months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Click here to see information gathered during the recruitment process.  You may need additional permissions to see these data</inlineHelpText>
        <label>Applicant</label>
        <referenceTo>xcdhcm__Applicant__c</referenceTo>
        <relationshipLabel>Personal</relationshipLabel>
        <relationshipName>Personal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Auto_enrolment_date__c</fullName>
        <description>Date on which Employee is first set up for auto enrolment
Set by code when automatically enrolled</description>
        <label>Auto enrolment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Auto_enrolment_notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have we sent a notification of rights regarding auto enrolment?
Set by code when we send the notification</description>
        <label>Auto enrolment notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Bank__c</fullName>
        <inlineHelpText>Bank name</inlineHelpText>
        <label>Bank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Bank_address__c</fullName>
        <label>Bank address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Bank_transfer__c</fullName>
        <label>Bank transfer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BACS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Birthday__c</fullName>
        <description>Presents DOB as Birthday in the current year. This field is used in Birthday alert Functionality and the formula should not be edited.</description>
        <formula>DATE( YEAR( TODAY() ) , MONTH( xcdhcm__DOB__c ) , DAY( xcdhcm__DOB__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Birthday_alert_leaver_check__c</fullName>
        <description>It is used in the back end to display employees in the home page Birthday Alert. Created by Saravanan. Before making changes please discuss.</description>
        <formula>IF( xcdhcm__Employee_Details__r.xcdhcm__Leaving_Date__c &gt;= xcdhcm__Birthday__c ,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birthday alert leaver check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Building_society_reference__c</fullName>
        <inlineHelpText>Building society account number</inlineHelpText>
        <label>Building society reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Combine_earnings_for_auto_enrolment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use only for multi job role clients</description>
        <inlineHelpText>If the Employee has more than one Job Role and Compensation, should earnings be combined for automatic enrolment assessment?</inlineHelpText>
        <label>Combine earnings for auto enrolment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Country__c</fullName>
        <inlineHelpText>Country for which the visa is eligible</inlineHelpText>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Country_of_issue__c</fullName>
        <label>Visa country of issue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Current_employee__c</fullName>
        <formula>AND(OR( ISBLANK( xcdhcm__Leaving_date__c ) , xcdhcm__Leaving_date__c &gt; TODAY()), xcdhcm__Employee_Details__r.xcdhcm__Start_Date__c  &lt; TODAY())</formula>
        <label>Current employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__DBS_expiry_date__c</fullName>
        <inlineHelpText>Date when the current DBS check expires</inlineHelpText>
        <label>DBS expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__DBS_expiry_reminder__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used to drive secondary workflow to re-queue DBS expiry reminder</description>
        <label>DBS expiry reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__DBS_reference_number__c</fullName>
        <label>DBS disclosure number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__DBS_status__c</fullName>
        <label>DBS status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not required</fullName>
                </value>
                <value>
                    <fullName>Forms with employee</fullName>
                </value>
                <value>
                    <fullName>Forms submitted to HR</fullName>
                </value>
                <value>
                    <fullName>Forms sent for approval</fullName>
                </value>
                <value>
                    <fullName>DBS reference received</fullName>
                </value>
                <value>
                    <fullName>DBS expired</fullName>
                </value>
                <value>
                    <fullName>DBS Form issued to employee</fullName>
                </value>
                <value>
                    <fullName>DBS Form submitted to HR</fullName>
                </value>
                <value>
                    <fullName>DBS Form submitted for Authorisation</fullName>
                </value>
                <value>
                    <fullName>DBS Reference Number issued</fullName>
                </value>
                <value>
                    <fullName>Out of Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__DOB_Month__c</fullName>
        <formula>CASE( MONTH(xcdhcm__DOB__c) , 1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOB month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Director_since_date__c</fullName>
        <inlineHelpText>The date on which the Employee was first appointed Director</inlineHelpText>
        <label>Director since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Directors_NI__c</fullName>
        <inlineHelpText>Note - only use the Alternative basis where:
- The Director agrees to the basis
- Earnings are normally regular
- Payments per period normally exceed the LEL</inlineHelpText>
        <label>Director&apos;s NI basis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Alternative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Driver_licence__c</fullName>
        <description>Use to record driver licence number</description>
        <label>Driver licence</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__EEA_citizen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EEA citizen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__EPM6_scheme_expatriate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EPM6 scheme (expatriate)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Effective_from__c</fullName>
        <description>Record effective from date for NI category.</description>
        <label>NI category effective from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>xcdhcm__Employee_Detail__c</referenceTo>
        <relationshipLabel>Personal</relationshipLabel>
        <relationshipName>Personal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employer_PAYE_reference__c</fullName>
        <label>Employer PAYE reference</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employer__c</fullName>
        <formula>xcdhcm__Employee_Details__r.xcdhcm__Job_Role__r.xcdhcm__Companies__r.xcdhcm__Employer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Encrypted_field__c</fullName>
        <description>Created for NPPD-1224.</description>
        <label>Encrypted field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Engine_size__c</fullName>
        <inlineHelpText>Enter the engine size of the car used for Company travel and expenses</inlineHelpText>
        <label>Vehicle engine size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1400cc or less</fullName>
                </value>
                <value>
                    <fullName>1401-1600cc</fullName>
                </value>
                <value>
                    <fullName>1601-2000cc</fullName>
                </value>
                <value>
                    <fullName>&gt; 2000cc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Ethnicity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ethnicity</label>
        <referenceTo>xcdhcm__Ethnicity__c</referenceTo>
        <relationshipLabel>Personal</relationshipLabel>
        <relationshipName>Personal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__First_NI_category_change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First NI category change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__First_name__c</fullName>
        <formula>xcdhcm__Employee_Details__r.xcdhcm__User__r.FirstName</formula>
        <label>First name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Foreign_country__c</fullName>
        <formula>IF( xcdhcm__Country__c  &lt;&gt; &quot;UK&quot;  || null , xcdhcm__Country__c  , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Foreign country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Fuel_type__c</fullName>
        <inlineHelpText>Enter the type of fuel used in the car used for Company travel</inlineHelpText>
        <label>Fuel type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Petrol</fullName>
                </value>
                <value>
                    <fullName>LPG</fullName>
                </value>
                <value>
                    <fullName>Diesel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__HR_user_status__c</fullName>
        <formula>text(xcdhcm__Employee_Details__r.xcdhcm__User__r.xcdhcm__User__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Hide_Passport_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to hide the passport section fields for this employee</inlineHelpText>
        <label>Hide passport details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Hide_Visa_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to hide the visa section fields for this employee</inlineHelpText>
        <label>Hide visa details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Hide_vehicle_details__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to hide the vehicle section fields for this employee</inlineHelpText>
        <label>Hide other section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Home_phone__c</fullName>
        <label>Home phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Include_time_in_payroll__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in timesheet.
This field is deprecated and moved to jobrole.</description>
        <inlineHelpText>Check where the Employee is to be paid according to hours worked in the timesheet.  Note their Compensation record should contain an hourly rate of pay but not a regular salary</inlineHelpText>
        <label>xInclude time in payroll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Known_name__c</fullName>
        <label>Known name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Last_name__c</fullName>
        <formula>xcdhcm__Employee_Details__r.xcdhcm__User__r.LastName</formula>
        <label>Last name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Leaver_before_data_retention_period__c</fullName>
        <formula>If(
  not(isblank( xcdhcm__Employee_Details__r.xcdhcm__Company__r.xcdhcm__GDPR_data_retention_threshold__c )), 
  xcdhcm__Leaving_date__c &lt; xcdhcm__Employee_Details__r.xcdhcm__Company__r.xcdhcm__GDPR_data_retention_threshold__c, 
  xcdhcm__Leaving_date__c &lt; xcdhcm__Employee_Details__r.xcdhcm__Company__r.xcdhcm__HMRC_data_retention_threshold__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leaver before data retention period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Leaving_date__c</fullName>
        <formula>xcdhcm__Employee_Details__r.xcdhcm__Leaving_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee leaving date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Leaving_date_on_P45__c</fullName>
        <label>Leaving date previous employment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Legal_last_name__c</fullName>
        <inlineHelpText>Enter a legal last name as used in formal documentation.</inlineHelpText>
        <label>Legal last name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Legal_name__c</fullName>
        <inlineHelpText>Enter a legal first name as used in formal documentation.</inlineHelpText>
        <label>Legal first name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Middle_name__c</fullName>
        <label>Middle name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__NI_category__c</fullName>
        <label>NI category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A  All other employees</fullName>
                </value>
                <value>
                    <fullName>B  Married women and widows entitled to pay reduced NI (attach form CA4139/CF383/CF380A)</fullName>
                </value>
                <value>
                    <fullName>C  Employees over State pension age (attach passport/birth certificate)</fullName>
                </value>
                <value>
                    <fullName>J   Employees deferring NI/paying in another job (attach deferment certificate per tax year)</fullName>
                </value>
                <value>
                    <fullName>M  Employees under 21 (attach passport/birth certificate)</fullName>
                </value>
                <value>
                    <fullName>X  Not liable for NI</fullName>
                </value>
                <value>
                    <fullName>Z  Employees under 21 deferring NI/paying in another job (attach deferment certificate per tax year)</fullName>
                </value>
                <value>
                    <fullName>I standard contracted-out NICs</fullName>
                </value>
                <value>
                    <fullName>D All employees apart from those in groups E, C and L in this table</fullName>
                </value>
                <value>
                    <fullName>E Married women and widows entitled to pay reduced National Insurance</fullName>
                </value>
                <value>
                    <fullName>L Employees who can defer National Insurance because they’re already paying it in another job</fullName>
                </value>
                <value>
                    <fullName>H Apprentices under the age of 25.</fullName>
                </value>
                <value>
                    <fullName>K Contracted-out salary related deferred rate contributions for employees under 21.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__National_insurance_number__c</fullName>
        <inlineHelpText>If you do not yet have a number or don&apos;t know it, please leave blank</inlineHelpText>
        <label>National insurance number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Nationality__c</fullName>
        <description>Country where employee is a passport holder</description>
        <inlineHelpText>Country where employee is a qualified and registered national</inlineHelpText>
        <label>Nationality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>British</fullName>
                </value>
                <value>
                    <fullName>American</fullName>
                </value>
                <value>
                    <fullName>Afghan</fullName>
                </value>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>Algerian</fullName>
                </value>
                <value>
                    <fullName>Andorran</fullName>
                </value>
                <value>
                    <fullName>Angolan</fullName>
                </value>
                <value>
                    <fullName>Argentinian</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Australian</fullName>
                </value>
                <value>
                    <fullName>Austrian</fullName>
                </value>
                <value>
                    <fullName>Azerbaijani</fullName>
                </value>
                <value>
                    <fullName>Bahamian</fullName>
                </value>
                <value>
                    <fullName>Bahraini</fullName>
                </value>
                <value>
                    <fullName>Bangladeshi</fullName>
                </value>
                <value>
                    <fullName>Barbadian</fullName>
                </value>
                <value>
                    <fullName>Belgian</fullName>
                </value>
                <value>
                    <fullName>Beninese</fullName>
                </value>
                <value>
                    <fullName>Bhutanese</fullName>
                </value>
                <value>
                    <fullName>Bolivian</fullName>
                </value>
                <value>
                    <fullName>Bosnian</fullName>
                </value>
                <value>
                    <fullName>Brazilian</fullName>
                </value>
                <value>
                    <fullName>Briton</fullName>
                </value>
                <value>
                    <fullName>Bruneian</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Burmese</fullName>
                </value>
                <value>
                    <fullName>Burundian</fullName>
                </value>
                <value>
                    <fullName>Cambodian</fullName>
                </value>
                <value>
                    <fullName>Cameroonian</fullName>
                </value>
                <value>
                    <fullName>Canadian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Note__c</fullName>
        <defaultValue>&quot;Note: Payroll is run some days before Pay day so changes may not apply until the next period&apos;s Payroll&quot;</defaultValue>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__P45_previous_employer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in NewPayrollEmployee page</description>
        <label>P45 previous employer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__P45_starter_tax_code__c</fullName>
        <description>Displays tax code from employee&apos;s starter P45</description>
        <inlineHelpText>Displays tax code from employee&apos;s starter P45</inlineHelpText>
        <label>P45 starter tax code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__P_Sort_code__c</fullName>
        <inlineHelpText>Bank sort code.  Please enter data using the format 99-99-99</inlineHelpText>
        <label>Sort code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Paper_payslip_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paper payslip required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Partnership_status__c</fullName>
        <label>Partnership status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Registered civil partnership</fullName>
                </value>
                <value>
                    <fullName>Nominated cohabiting partner</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>